--- a/templates/sentry.conf.py.j2
+++ b/templates/sentry.conf.py.j2
@@ -138,7 +138,7 @@ SENTRY_DIGESTS = 'sentry.digests.backends.redis.RedisBackend'
 # FORCE_SCRIPT_NAME = '/sentry'
 
 SENTRY_WEB_HOST = '0.0.0.0'
-SENTRY_WEB_PORT = 9000
+SENTRY_WEB_PORT = {{ sentry_port }}
 SENTRY_WEB_OPTIONS = {
     # 'workers': 3,  # the number of web workers
     # 'protocol': 'uwsgi',  # Enable uwsgi protocol instead of http
