--- a/templates/nginx-sentry.conf.j2
+++ b/templates/nginx-sentry.conf.j2
@@ -1,9 +1,9 @@
 server {
     listen       80;
     listen       443 ssl;
-    ssl_certificate      /etc/nginx/nginx-{{ sentry_hostname }}.crt;
-    ssl_certificate_key  /etc/nginx/nginx-{{ sentry_hostname }}.key;
-    server_name  {{ sentry_hostname }};
+    ssl_certificate      /etc/nginx/nginx-{{ sentry.hostname }}.crt;
+    ssl_certificate_key  /etc/nginx/nginx-{{ sentry.hostname }}.key;
+    server_name  {{ sentry.hostname }};
 
     location / {
       proxy_pass         http://localhost:9000;
