--- a/templates/sentry-worker.ini.j2
+++ b/templates/sentry-worker.ini.j2
@@ -1,7 +1,7 @@
 [program:sentry-worker]
 command=/usr/bin/sentry run worker
 environment=SENTRY_CONF="/etc/sentry"
-user={{ sentry_user }}
+user={{ sentry.user }}
 autostart=True
 autorestart=True
 stdout_logfile=/var/log/sentry/sentry-worker_stdout.log
